# csad2526ki404victorcherkashyn27

./: CMakeLists.txt  README.md  ci.sh  math_operations.h
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
CopilotPrompts/: copilot_task_1.txt  copilot_task_2.txt  copilot_task_3.txt  copilot_task_4.txt  copilot_task_5.txt
tests/: unit_tests.cpp
